branches/wip/Archive/4178b438e517d952a2e3c488fe7f9d8b-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp: In member function ‘void S::bar() const’:
main.cpp:10:27: error: no matching function for call to ‘call(const S* const, void (S::*)())’
         call(this, &S::foo);
                           ^
main.cpp:10:27: note: candidate is:
main.cpp:4:6: note: template<class T> void call(T*, void (T::*)())
 void call(T *, void (T::*)()){}
      ^
main.cpp:4:6: note:   template argument deduction/substitution failed:
main.cpp:10:27: note:   deduced conflicting types for parameter ‘T’ (‘const S’ and ‘S’)
         call(this, &S::foo);
                           ^
